--- a/mall-system/src/main/resources/application.yml
+++ b/mall-system/src/main/resources/application.yml
@@ -11,3 +11,22 @@ spring:
     hibernate:
       ddl-auto: update
     database-platform: org.hibernate.dialect.MySQL5Dialect
+  redis:
+    host: localhost
+    database: 0
+    port: 6379
+    password:
+    jedis:
+      pool:
+        max-active: 8
+        max-wait: -1ms
+        max-idle: 8
+        min-idle: 0
+    timeout: 3000ms
+
+redis:
+  key:
+    prefix:
+      authCode: "portal:authCode"
+    expire:
+      authCode: 120
