Update security part.

--- a/mall-system/src/main/resources/application.yml
+++ b/mall-system/src/main/resources/application.yml
@@ -32,5 +32,7 @@ redis:
       authCode: 120
 
 jwt:
+  tokenHeader: Authorization
   secret: "Shaw_Liao"
-  expire: 1500
+  expire: 604800
+  tokenHead: Bearer
